# group_selector

./: .gitignore  .pdm.toml  .pre-commit-config.yaml  LICENSE  README.md  group_selector.py  group_statistics.py  noxfile.py  pyproject.toml  setup.py  test_suite.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py
src/group_selector/: __init__.py  group_selector.py
src/group_selector/_compat/: __init__.py  typing.py
tests/: test_package.py  test_suite.py
